New python based executable using CMD for UI, as well as python source code

--- a/welcome_app.html
+++ b/welcome_app.html
@@ -44,7 +44,7 @@
                 Welcome Message Generator
             </h1>
             <p class="text-gray-400 text-center mt-2 max-w-lg mx-auto">
-                Enter your details to receive a personalized welcome message based on the time of day.
+                Enter your details to receive a personalized welcome message.
             </p>
         </div>
 
@@ -81,7 +81,7 @@
 
         <!-- Footer Section -->
         <div class="p-4 bg-gray-800 border-t border-red-800 text-center text-gray-500 text-sm">
-            Built with 🖤 and assistance from Gemini
+            Built by Sid
         </div>
     </div>
 
