--- a/unit converter/popup.html
+++ b/unit converter/popup.html
@@ -8,13 +8,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 p-4">
-  <div class="bg-white rounded-lg shadow-lg p-6">
-    <h1 class="text-2xl font-bold text-center mb-6 text-gray-800">Universal Unit Converter</h1>
+<body class="bg-black">
+  <div class="bg-white rounded-lg shadow-lg">
+    <h1 class="text-2xl font-bold text-center mb-6 text-black">Universal Unit Converter</h1>
 
     <!-- Unit Category Selector -->
     <div class="mb-4">
-      <label for="unitCategorySelect" class="block text-sm font-medium text-gray-700 mb-1">Category:</label>
+      <label for="unitCategorySelect" class="block text-sm font-medium text-gray-700 mb-1 text-center">Category:</label>
       <select id="unitCategorySelect" class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900">
         <option value="length">Length</option>
         <option value="mass">Mass</option>
@@ -29,42 +29,48 @@
     </div>
 
     <div class="mb-4">
-      <label for="valueInput" class="block text-sm font-medium text-gray-700 mb-1">Value:</label>
-      <input type="number" id="valueInput" class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-gray-900" placeholder="Enter value">
+      <label for="valueInput" class="block text-sm font-medium text-gray-700 mb-1 text-center">Value:</label>
+      <input type="number" id="valueInput" class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900" placeholder="Enter value">
     </div>
 
     <div class="mb-4 flex items-center space-x-2">
       <div class="flex-1">
-        <label for="fromUnit" class="block text-sm font-medium text-gray-700 mb-1">From Unit:</label>
+        <label for="fromUnit" class="block text-sm font-medium text-gray-700 mb-1 text-center">From Unit:</label>
         <select id="fromUnit" class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900">
           <!-- Options will be populated by JavaScript based on category -->
         </select>
       </div>
       
       <!-- Swap Button -->
-      <!-- Reduced size of the swap button -->
       <button id="swapUnitsBtn" class="mt-5 w-8 h-8 flex items-center justify-center bg-gray-200 text-gray-700 rounded-full shadow-md hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 transition duration-150 ease-in-out" title="Swap Units">
-        <!-- Reduced SVG size -->
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L11 5.414V14a1 1 0 11-2 0V5.414L6.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 010-1.414L9 12.586V6a1 1 0 112 0v7.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3z" clip-rule="evenodd" />
         </svg>
       </button>
 
       <div class="flex-1">
-        <label for="toUnit" class="block text-sm font-medium text-gray-700 mb-1">To Unit:</label>
+        <label for="toUnit" class="block text-sm font-medium text-gray-700 mb-1 text-center">To Unit:</label>
         <select id="toUnit" class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900">
           <!-- Options will be populated by JavaScript based on category -->
         </select>
       </div>
     </div>
 
-    <div class="mt-6 p-4 bg-blue-50 border border-blue-200 rounded-lg text-center">
-      <label class="block text-sm font-medium text-blue-700 mb-2">Result:</label>
+    <!-- Scientific Notation Toggle -->
+    <div class="flex items-center justify-center mt-2 mb-4">
+      <label for="scientificNotationToggle" class="relative inline-flex items-center cursor-pointer">
+        <input type="checkbox" id="scientificNotationToggle" class="sr-only peer">
+        <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
+        <span class="ml-3 text-sm font-medium text-gray-900">Scientific Notation</span>
+      </label>
+    </div>
+
+    <div class="mt-2 p-4 bg-blue-50 border border-blue-200 rounded-lg text-center">
+      <label class="block text-sm font-medium text-blue-700 mb-2 text-center">Result:</label>
       <p id="output" class="text-2xl font-semibold text-blue-800">0</p>
     </div>
     <p id="errorMessage" class="text-red-600 text-sm mt-2 text-center"></p>
 
-    <!-- Removed the extra-content div used for demonstrating scrollbar -->
   </div>
   <script src="popup.js"></script>
 </body>
